[workspace]
resolver = "2"
members  = ["aws-secrets-manager", "aws-kms", "myerrors", "users", "groups", "approval_flows", "prefix_policies", "secret_requests", "myhandlers", "server"]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.91"
license      = "UNLICENSED"
publish      = false

[workspace.dependencies]
anyhow                 = "1.0.98"
aws-config             = "1.8.12"
aws-sdk-kms            = "1.94.0"
aws-sdk-secretsmanager = "1.94.0"
axum                   = "0.8.4"
base64                 = "0.22.1"
chrono                 = "0.4.44"
config                 = "0.15.22"
dotenv                 = "0.15.0"
serde                  = { version = "1.0.228", features = ["derive"] }
serde_json             = "1.0.149"
sqlx                   = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "macros"] }
tokio                  = { version = "1.52.0", features = ["full"] }
tracing                = "0.1.44"
tracing-subscriber     = "0.3.23"
uuid                   = { version = "1.23.1", features = ["v4", "serde"] }
