[package]
name         = "aws-kms"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }

[dependencies]
anyhow      = { workspace = true }
aws-sdk-kms = { workspace = true }
base64      = { workspace = true }
