[package]
name         = "aws-secrets-manager"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }

[dependencies]
anyhow                 = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
