[package]
name         = "groups"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
sqlx   = { workspace = true }
uuid   = { workspace = true }
