[package]
name         = "myerrors"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }

[dependencies]
anyhow  = { workspace = true }
axum    = { workspace = true }
tracing = { workspace = true }
