[package]
name         = "myhandlers"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }

[dependencies]
myerrors = { path = "../myerrors" }

aws-sdk-kms            = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
sqlx                   = { workspace = true }
